# glom-explorer

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/omp8x/: combined_high_clustered.csv  dropped_low_clustered.csv  glom_coords_2.csv  glom_coords_4.csv  omp8x_1_low.txt  omp8x_2_high.txt  omp8x_3_high.txt  omp8x_4_high.txt  omp8x_odornames.txt  omp8x_smiles.txt  retained_high_clustered.csv
glom_explorer/: __init__.py  clustering.py  config.py  data.py  metrics.py  topography.py  tuning.py  utils.py
glom_explorer/data/: combined_low_clustered.csv  dropped_high_clustered.csv  glom_coords_1.csv  glom_coords_3.csv  omp8x_1_high.txt  omp8x_2_low.txt  omp8x_3_low.txt  omp8x_4_low.txt  omp8x_smarts42.csv  retained_low_clustered.csv  variants.json
notebooks/: 01_nmf_basis_selection.ipynb  02_glomerular_tuning.ipynb  03_glomerular_topography.ipynb  04_regression_tutorial.ipynb
